<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".presentation.ButtonActivity"
>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/button_activity_title"
    />

    <TextView
        android:id="@+id/headline_raised_buttons"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:text="@string/button_activity_headline_raised_buttons"
    />
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_raised_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_raised_buttons"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
        >
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_raised_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_activity_txt_raised_button"
                android:theme="@style/MyWidget.Button"
            />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_raised_button_disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_raised_button"
                android:enabled="false"
                android:text="@string/button_activity_txt_raised_button_disabled"
                android:theme="@style/MyWidget.Button"
            />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_raised_button_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_raised_button"
                android:text="@string/button_activity_txt_raised_button_warn"
                android:theme="@style/MyWidget.Button.Warn"
            />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_raised_button_warn_disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_raised_button_disabled"
                android:layout_toRightOf="@id/btn_raised_button_warn"
                android:enabled="false"
                android:text="@string/button_activity_txt_raised_button_warn_disabled"
                android:theme="@style/MyWidget.Button.Warn"
            />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/headline_flat_buttons"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_raised_buttons"
        android:text="@string/button_activity_headline_flat_buttons"
    />
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_flat_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_flat_buttons"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
        >
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_flat_button"
                style="@style/MyWidget.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_activity_txt_flat_button"
            />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_flat_button_disabled"
                style="@style/MyWidget.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_flat_button"
                android:enabled="false"
                android:text="@string/button_activity_txt_flat_button_disabled"
            />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
